--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 	</div>
 </section>
 
-<section class="mx-5 md:max-w-xl lg:max-w-xl m-auto">
+<section class="mx-5 md:max-w-xl lg:max-w-xl mx-auto">
 	<section>
 		<p>You can't beat the taste of sun ripenned locally grown tomatotes etc</p>
 	</section>
