Debugging and client preivew
Fir to smart phone screen

--- a/src/index.html
+++ b/src/index.html
@@ -2,23 +2,22 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Vegboxes</title>
+	<meta name="viewport" content="width=device-width; initial-scale=1.0">
+	<title>Weeky organic vegbox</title>
 	<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 	<link href="/assets/styles/main.css" rel="stylesheet" type="text/css">
 </head>
 <body class="font-sans">
-<section>
-<!--	<div class="w-screen bg-scroll h-vh50 sm:h-vh50 md:h-vh75" style="background-image: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url(/assets/images/brand/veg-box-01.jpg); background-size: 100%; background-repeat: no-repeat; background-position: center; "></div>-->
-	<div class="w-screen bg-scroll h-vh50 sm:h-vh50 md:h-vh75" style="background-image: url(/assets/images/brand/veg-box-01.jpg); background-size: 100%; background-repeat: no-repeat; background-position: center; "></div>
-	<h1 class="mx-5 md:max-w-xl lg:max-w-xl mx-auto font-extrabold">Meadowsweet Organics<br>weekly veg box</h1>
-	<div class="mx-5 md:max-w-xl lg:max-w-xl mx-auto mb-8 mt-10">
+<div class="w-screen bg-scroll h-vh50 sm:h-vh50 md:h-vh75" style="background-image: url(/assets/images/brand/veg-box-01.jpg); background-size: 100%; background-repeat: no-repeat; background-position: center; "></div>
+
+
+<section class="px-5 md:max-w-xl lg:max-w-xl mx-auto">
+	<h1 class="font-extrabold">Meadowsweet Organics<br>weekly veg box</h1>
+	<div class="mb-8 mt-10">
 		<div class="flex text-sm text-gray-500 justify-between"><span class="text-black font-bold">1. RESERVE</span><span>2. PAY BY STANDING ORDER</span><span>3. CONFIRM BY EMAIL</span></div>
 		<h2 class="text-4xl mt-2 font-bold">Reserve your vegbox</h2>
 		<span class="text-2xl">by completing the form below</span>
 	</div>
-</section>
-
-<section class="mx-5 md:max-w-xl lg:max-w-xl mx-auto">
         <h2 class="mb-2 text-3xl">Six fresh and delicious years</h2>
 		<p class="mb-4">For our 6th year we are focusing on fresh and delicious summer vegetables complemented with a healthy portion of staples. You can't beat the taste of locally grown, sun ripened tomatoes and cucumbers</p>
         <img class="" alt="tomatoes on the vine" src="/assets/images/brand/tomatoes.jpg">
@@ -112,7 +111,7 @@
 					<p class="font-sans">You can unsubscribe at any time by clicking the link in the footer of our emails. For information about our privacy practices, please visit our website.</p>
 				</div>
 				<div class="content__gdprLegal">
-					<p class="font-sans">We use Mailchimp as our marketing platform. By clicking below to subscribe, you acknowledge that your information will be transferred to Mailchimp for processing. <a href="https://mailchimp.com/legal/" target="_blank">Learn more about Mailchimp's privacy practices here.</a></p>
+					<p class="font-sans">We use Mailchimp as our marketing platform. By clicking below to subscribe, you acknowledge that your information will be transferred to Mailchimp for processing. <a class="text-gray-900" href="https://mailchimp.com/legal/" target="_blank">Learn more about Mailchimp's privacy practices here.</a></p>
 				</div>
 			</div>
 			<div id="mce-responses" class="clear">
@@ -120,8 +119,8 @@
 				<div class="response" id="mce-success-response" style="display:none"></div>
 			</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 			<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_50fa9b0f4d955d7653665e513_1bdb5dfda6" tabindex="-1" value=""></div>
-			<div class="flex text-sm text-gray-500 justify-between mt-8 mb-4"><span class="text-black font-bold">1. RESERVE</span><span>2. PAY BY STANDING ORDER</span><span>3. CONFIRM BY EMAIL</span></div>
-			<div class="clear float-right"><input class="text-l font-bold py-12 rounded-full uppercase tracking-widest bg-teal-400 hover:bg-teal-500 button pt-3 pb-10 text-gray-900 mt-8" type="submit" value="Reserve your Vegbox" name="subscribe" id="mc-embedded-subscribe" ></div>
+			<div class="flex text-sm text-gray-500 justify-between mt-8 mb-4 pr-4"><span class="text-black font-bold">1. RESERVE</span><span>2. PAY BY STANDING ORDER</span><span>3. CONFIRM BY EMAIL</span></div>
+			<div class="clear float-right pr-2"><input class="text-l font-bold py-12 rounded-full uppercase tracking-widest bg-teal-400 hover:bg-teal-500 button pt-3 pb-10 text-gray-900 mt-8" type="submit" value="Reserve your Vegbox" name="subscribe" id="mc-embedded-subscribe" ></div>
 		</div>
 	</form>
 </div>
