--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width; initial-scale=1.0">
-	<title>Weeky organic vegbox</title>
+	<title>Weekly organic vegbox</title>
 	<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 	<link href="/assets/styles/main.css" rel="stylesheet" type="text/css">
 </head>
@@ -32,6 +32,7 @@
             <li class="mb-4 ml-5 list-disc">Payments are made by standing order, which helps us keep the price down.</li>
 			<li class="mb-4 ml-5 list-disc">We'll email out payment details on completion of the form below</li>
 			<li class="mb-4 ml-5 list-disc">If you have any questions please use the sign up form below and reply, or contact vegbox[at]meadowsweetorganics.co.uk</li>
+			<li class="mb-4 ml-5 list-disc">If you don't receive an email within minutes of signing up below check your spam folder and white list vegbox[at]meadowsweetorganics.co.uk</li>
             <li class="mb-4 ml-5 list-disc">You are signing up for a whole season. If you only want a part season we will try to accomodate your needs but preference will be given to those who commit to a full season.</li>
         </ul>
 		<img alt="a vegbox" src="/assets/images/brand/veg-box-2.jpg">
