--- a/src/index.html
+++ b/src/index.html
@@ -3,24 +3,25 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width; initial-scale=1.0">
-	<title>Weekly organic vegbox</title>
+	<title>Weekly organic veg box</title>
 	<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 	<link href="/assets/styles/main.css" rel="stylesheet" type="text/css">
 </head>
 <body class="font-sans">
 <div class="w-screen bg-scroll h-vh50 sm:h-vh50 md:h-vh75" style="background-image: url(/assets/images/brand/veg-box-01.jpg); background-size: 100%; background-repeat: no-repeat; background-position: center; "></div>
-
+<img class="hidden" alt="tomatoes on the vine" src="/assets/images/brand/veg-box-01.jpg">
 
 <section class="px-5 md:max-w-xl lg:max-w-xl mx-auto">
 	<h1 class="font-extrabold">Meadowsweet Organics<br>weekly veg box</h1>
 	<div class="mb-8 mt-10">
 		<div class="flex text-sm text-gray-500 justify-between"><span class="text-black font-bold">1. RESERVE</span><span>2. PAY BY STANDING ORDER</span><span>3. CONFIRM BY EMAIL</span></div>
-		<h2 class="text-4xl mt-2 font-bold">Reserve your vegbox</h2>
+		<h2 class="text-4xl mt-2 font-bold">Reserve your veg box</h2>
 		<span class="text-2xl">by completing the form below</span>
 	</div>
         <h2 class="mb-2 text-3xl">Six fresh and delicious years</h2>
 		<p class="mb-4">For our 6th year we are focusing on fresh and delicious summer vegetables complemented with a healthy portion of staples. You can't beat the taste of locally grown, sun ripened tomatoes and cucumbers</p>
-        <img class="" alt="tomatoes on the vine" src="/assets/images/brand/tomatoes.jpg">
+		<img class="" alt="tomatoes on the vine" src="/assets/images/brand/veg-box-01.jpg">
+	<!--        <img class="" alt="tomatoes on the vine" src="/assets/images/brand/tomatoes.jpg">-->
 		<h2 class="mt-8 mb-4 text-3xl">Our season</h2>
         <p class="mb-4"> Our season runs from the third week of May (wU+2215c 18th) through to the end of the second week of October (wU+2215c 12th). You will receive a weekly supply of delicious veg for the whole of the season. We will be in touch when we have finalised our delivery & collection days.</p>
         <p class="mb-4">Delivery is available in Fife or you can collect your veg from the farm. This is a great opportunity to explore healthy farmland and our pasture. Feeling and hearing the diversity brought by organic farming and perhaps catching a glimpse of swooping swifts, low over the grasses.</p>
@@ -35,7 +36,7 @@
 			<li class="mb-4 ml-5 list-disc">If you don't receive an email within minutes of signing up below check your spam folder and white list vegbox[at]meadowsweetorganics.co.uk</li>
             <li class="mb-4 ml-5 list-disc">You are signing up for a whole season. If you only want a part season we will try to accomodate your needs but preference will be given to those who commit to a full season.</li>
         </ul>
-		<img alt="a vegbox" src="/assets/images/brand/veg-box-2.jpg">
+		<img alt="a veg box" src="/assets/images/brand/veg-box-2.jpg">
 </section>
 <!-- Begin Mailchimp Signup Form -->
 
@@ -44,7 +45,7 @@
 	<form action="https://mindfulness4change.us11.list-manage.com/subscribe/post?u=50fa9b0f4d955d7653665e513&amp;id=1bdb5dfda6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 		<div id="mc_embed_signup_scroll">
 			<div class="mc-field-group input-group">
-				<h2 class="text-3xl">How would you like to receive your vegbox?</h2>
+				<h2 class="text-3xl">How would you like to receive your veg box?</h2>
 
 					<div class="radio-cards p-2 flex flex-row justify-center leading-snug">
 						<input class="hidden" type="radio" value="1" name="group[18845]" id="mce-group[18845]-18845-0">
@@ -103,7 +104,7 @@
 			<div id="mergeRow-gdpr" class="mergeRow gdpr-mergeRow content__gdprBlock mc-field-group">
 				<div class="content__gdpr">
 					<label class="font-sans text-3xl mb-4">Permission to contact</label>
-					<p class="font-sans">We share our ordering details and updates to your vegboxes by email. We do not pass your details to anyone. Please select emails below.</p>
+					<p class="font-sans">We share our ordering details and updates to your veg boxes by email. We do not pass your details to anyone. Please select emails below.</p>
 					<div class="bg-teal-200 py-4 rounded-lg hover:bg-teal-400 my-6 text-gray-900">
 					<fieldset class="mc_fieldset gdprRequired mc-field-group" name="interestgroup_field">
 						<label class="font-bold text-xl checkbox subfield" for="gdpr_26913"><input type="checkbox" id="gdpr_26913" name="gdpr[26913]" value="Y" class="av-checkbox gdpr"><span>Email</span> </label>
@@ -121,7 +122,7 @@
 			</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 			<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_50fa9b0f4d955d7653665e513_1bdb5dfda6" tabindex="-1" value=""></div>
 			<div class="flex text-sm text-gray-500 justify-between mt-8 mb-4 pr-4"><span class="text-black font-bold">1. RESERVE</span><span>2. PAY BY STANDING ORDER</span><span>3. CONFIRM BY EMAIL</span></div>
-			<div class="clear float-right pr-2"><input class="text-l font-bold py-12 rounded-full uppercase tracking-widest bg-teal-400 hover:bg-teal-500 button pt-3 pb-10 text-gray-900 mt-8" type="submit" value="Reserve your Vegbox" name="subscribe" id="mc-embedded-subscribe" ></div>
+			<div class="clear float-right pr-2"><input class="text-l font-bold py-12 rounded-full uppercase tracking-widest bg-teal-400 hover:bg-teal-500 button pt-3 pb-10 text-gray-900 mt-8" type="submit" value="Reserve your veg box" name="subscribe" id="mc-embedded-subscribe" ></div>
 		</div>
 	</form>
 </div>
