--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,8 @@
 	<link href="/assets/styles/main.css" rel="stylesheet" type="text/css">
 </head>
 <body class="font-sans">
-<div class="w-screen bg-scroll h-vh50 sm:h-vh50 md:h-vh75" style="background-image: url(/assets/images/brand/veg-box-01.jpg); background-size: 100%; background-repeat: no-repeat; background-position: center; "></div>
-<img class="hidden" alt="tomatoes on the vine" src="/assets/images/brand/veg-box-01.jpg">
-
+<!--<div class="w-screen bg-scroll h-vh50 sm:h-vh50 md:h-vh75" style="background-image: url(/assets/images/brand/veg-box-01.jpg); background-size: 100%; background-repeat: no-repeat; background-position: center; "></div>-->
+<img class="hidden" alt="a veg box with tomatoes" src="/assets/images/brand/veg-box-01.jpg">
 <section class="px-5 md:max-w-xl lg:max-w-xl mx-auto">
 	<h1 class="font-extrabold">Meadowsweet Organics<br>weekly veg box</h1>
 	<div class="mb-8 mt-10">
@@ -20,11 +19,12 @@
 	</div>
         <h2 class="mb-2 text-3xl">Six fresh and delicious years</h2>
 		<p class="mb-4">For our 6th year we are focusing on fresh and delicious summer vegetables complemented with a healthy portion of staples. You can't beat the taste of locally grown, sun ripened tomatoes and cucumbers</p>
-		<img class="" alt="tomatoes on the vine" src="/assets/images/brand/veg-box-01.jpg">
+		<img class="" alt="veg box with tomatoes" src="/assets/images/brand/veg-box-01.jpg">
 	<!--        <img class="" alt="tomatoes on the vine" src="/assets/images/brand/tomatoes.jpg">-->
 		<h2 class="mt-8 mb-4 text-3xl">Our season</h2>
         <p class="mb-4"> Our season runs from the third week of May (wU+2215c 18th) through to the end of the second week of October (wU+2215c 12th). You will receive a weekly supply of delicious veg for the whole of the season. We will be in touch when we have finalised our delivery & collection days.</p>
-        <p class="mb-4">Delivery is available in Fife or you can collect your veg from the farm. This is a great opportunity to explore healthy farmland and our pasture. Feeling and hearing the diversity brought by organic farming and perhaps catching a glimpse of swooping swifts, low over the grasses.</p>
+	    <img class="" alt="tomatoes on the vine" src="/assets/images/brand/tomatoes.jpg">
+		<p class="mb-4">Delivery is available in Fife or you can collect your veg from the farm. This is a great opportunity to explore healthy farmland and our pasture. Feeling and hearing the diversity brought by organic farming and perhaps catching a glimpse of swooping swifts, low over the grasses.</p>
 		<img alt="swifts swooping through the air" src="/assets/images/brand/swifts.png"/>
 		<h2 class="mt-6 mb-4 text-3xl">Key information</h2>
         <ul class="mb-4">
