--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,9 @@
 	<!--        <img class="" alt="tomatoes on the vine" src="/assets/images/brand/tomatoes.jpg">-->
 		<h2 class="mt-8 mb-4 text-3xl">Our season</h2>
         <p class="mb-4"> Our season runs from the third week of May (wU+2215c 18th) through to the end of the second week of October (wU+2215c 12th). You will receive a weekly supply of delicious veg for the whole of the season. We will be in touch when we have finalised our delivery & collection days.</p>
-	    <img class="" alt="tomatoes on the vine" src="/assets/images/brand/tomatoes.jpg">
+	    <img class="my-6" alt="tomatoes on the vine" src="/assets/images/brand/tomatoes.jpg">
 		<p class="mb-4">Delivery is available in Fife or you can collect your veg from the farm. This is a great opportunity to explore healthy farmland and our pasture. Feeling and hearing the diversity brought by organic farming and perhaps catching a glimpse of swooping swifts, low over the grasses.</p>
-		<img alt="swifts swooping through the air" src="/assets/images/brand/swifts.png"/>
+		<img clas="mt-4 mb-2"alt="swifts swooping through the air" src="/assets/images/brand/swifts.png"/>
 		<h2 class="mt-6 mb-4 text-3xl">Key information</h2>
         <ul class="mb-4">
 			<li class="mb-4 ml-5 list-disc">We're an established farm – this is our 6th year.</li>
