--- a/src/index.html
+++ b/src/index.html
@@ -22,14 +22,14 @@
 		<img class="" alt="veg box with tomatoes" src="/assets/images/brand/veg-box-01.jpg">
 	<!--        <img class="" alt="tomatoes on the vine" src="/assets/images/brand/tomatoes.jpg">-->
 		<h2 class="mt-8 mb-4 text-3xl">Our season</h2>
-        <p class="mb-4"> Our season runs from the third week of May (wU+2215c 18th) through to the end of the second week of October (wU+2215c 12th). You will receive a weekly supply of delicious veg for the whole of the season. We will be in touch when we have finalised our delivery & collection days.</p>
+        <p class="mb-4"> Our season runs from the third week of May (w&#47c 18th) through to the end of the second week of October (w&#47c 12th). You will receive a weekly supply of delicious veg for the whole of the season. We will be in touch when we have finalised our delivery & collection days.</p>
 	    <img class="my-6" alt="tomatoes on the vine" src="/assets/images/brand/tomatoes.jpg">
 		<p class="mb-4">Delivery is available in Fife or you can collect your veg from the farm. This is a great opportunity to explore healthy farmland and our pasture. Feeling and hearing the diversity brought by organic farming and perhaps catching a glimpse of swooping swifts, low over the grasses.</p>
 		<img clas="mt-4 mb-2"alt="swifts swooping through the air" src="/assets/images/brand/swifts.png"/>
 		<h2 class="mt-6 mb-4 text-3xl">Key information</h2>
         <ul class="mb-4">
 			<li class="mb-4 ml-5 list-disc">We're an established farm – this is our 6th year.</li>
-            <li class="mb-4 ml-5 list-disc">Our veg boxes start the third week of May (wU+2215c 18th) and run until the end of the second week of October</li>
+            <li class="mb-4 ml-5 list-disc">Our veg boxes start the third week of May (w&#47c 18th) and run until the end of the second week of October</li>
             <li class="mb-4 ml-5 list-disc">Payments are made by standing order, which helps us keep the price down.</li>
 			<li class="mb-4 ml-5 list-disc">We'll email out payment details on completion of the form below</li>
 			<li class="mb-4 ml-5 list-disc">If you have any questions please use the sign up form below and reply, or contact vegbox[at]meadowsweetorganics.co.uk</li>
