--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,11 @@
 	<h1 class="font-extrabold">Meadowsweet Organics<br>weekly veg box</h1>
 	<div class="mb-8 mt-10">
 		<div class="flex text-sm text-gray-500 justify-between"><span class="text-black font-bold">1. RESERVE</span><span>2. PAY BY STANDING ORDER</span><span>3. CONFIRM BY EMAIL</span></div>
-		<h2 class="text-4xl mt-2 font-bold">Reserve your veg box</h2>
-		<span class="text-2xl">by completing the form below</span>
+		<h2 class="text-4xl mt-2 font-bold">All our veg boxes have been allocated</h2>
+		<span class="text-2xl">Complete form below to be updated on:</span>
+			<ul>
+				<li class="mt-2 mb-4 ml-5 list-disc">any new veg box allocations</li>
+				<li class="mb-4 ml-5 list-disc">availability in <strong>Edinburgh</strong></li>
 	</div>
         <h2 class="mb-2 text-3xl">Six fresh and delicious years</h2>
 		<p class="mb-4">For our 6th year we are focusing on fresh and delicious summer vegetables complemented with a healthy portion of staples. You can't beat the taste of locally grown, sun ripened tomatoes and cucumbers</p>
@@ -92,31 +95,38 @@
 				</div>
 			</div>
 
-			<div class="mc-field-group input-group">
-				<h2 class="font-sans text-3xl font-normal mb-4">Choose Collection or Delivery</h2>
+<!--			<div class="mc-field-group input-group">-->
+<!--				<h2 class="font-sans text-3xl font-normal mb-4">Choose Collection or Delivery</h2>-->
+<!--				<div class="flex flex-row justify-center leading-normal text-lg">-->
+<!--					<div class="w-6/12 float-left mr-4">-->
+<!--						<img alt="Rainbow over farm" src="/assets/images/brand/farm-rainbow.jpg" class="rounded mb-2 ">-->
+<!--						<span>Collect from the farm</span>-->
+<!--						<br><span class="text-2xl">£52 per month</span>-->
+<!--						<br><span>(£13 per week)</span>-->
+<!--					</div>-->
+<!--					<div class="w-6/12 float-right ml-4">-->
+<!--						<img alt="a van delivering" src="/assets/images/brand/delivery-01.jpg" class="rounded mb-2">-->
+<!--						Delivered to your door<br>-->
+<!--						<span class="text-2xl">£64 per month</span>-->
+<!--						<span><br>(£16 per week)</span>-->
+<!--					</div>-->
+<!--				</div>-->
+<!--				<div class="radio-buttons flex flex-row justify-center leading-snug mt-2">-->
+<!--					<input class="hidden" type="radio" value="1" name="group[18845]" id="mce-group[18845]-18845-0">-->
+<!--					<label class="w-6/12 float-left rounded-lg mr-4 pr-3 button-secondary flex justify-center font-bold border-2 border-gray-800 rounded-full py-2 pt-3 mt-1 text-l uppercase tracking-widest text-gray-800 hover:bg-gray-800 hover:text-white active:text-white active:bg-gray-800" for="mce-group[18845]-18845-0">Collect</label>-->
+<!--					<input class="hidden" type="radio" value="2" name="group[18845]" id="mce-group[18845]-18845-1">-->
+<!--					<label class="w-6/12 float-right rounded-lg ml-4 pl-3 button-secondary flex justify-center font-bold border-2 border-gray-800 rounded-full py-2 pt-3 mt-1 text-l uppercase tracking-widest text-gray-800 hover:bg-gray-800 hover:text-white active:text-white active:bg-gray-800" for="mce-group[18845]-18845-1">Deliver</label>-->
+<!--				</div>-->
+<!--			</div>-->
 
 
-				<div class="flex flex-row justify-center leading-normal text-lg">
-					<div class="w-6/12 float-left mr-4">
-						<img alt="Rainbow over farm" src="/assets/images/brand/farm-rainbow.jpg" class="rounded mb-2 ">
-						<span>Collect from the farm</span>
-						<br><span class="text-2xl">£52 per month</span>
-						<br><span>(£13 per week)</span>
-					</div>
-					<div class="w-6/12 float-right ml-4">
-						<img alt="a van delivering" src="/assets/images/brand/delivery-01.jpg" class="rounded mb-2">
-						Delivered to your door<br>
-						<span class="text-2xl">£64 per month</span>
-						<span><br>(£16 per week)</span>
-					</div>
-				</div>
-				<div class="radio-buttons flex flex-row justify-center leading-snug mt-2">
-					<input class="hidden" type="radio" value="1" name="group[18845]" id="mce-group[18845]-18845-0">
-					<label class="w-6/12 float-left rounded-lg mr-4 pr-3 button-secondary flex justify-center font-bold border-2 border-gray-800 rounded-full py-2 pt-3 mt-1 text-l uppercase tracking-widest text-gray-800 hover:bg-gray-800 hover:text-white active:text-white active:bg-gray-800" for="mce-group[18845]-18845-0">Collect</label>
-					<input class="hidden" type="radio" value="2" name="group[18845]" id="mce-group[18845]-18845-1">
-					<label class="w-6/12 float-right rounded-lg ml-4 pl-3 button-secondary flex justify-center font-bold border-2 border-gray-800 rounded-full py-2 pt-3 mt-1 text-l uppercase tracking-widest text-gray-800 hover:bg-gray-800 hover:text-white active:text-white active:bg-gray-800" for="mce-group[18845]-18845-1">Deliver</label>
-				</div>
-			</div>
+<!--				<div class="radio-buttons flex flex-row justify-center leading-snug mt-2">-->
+<!--					<input class="" type="radio" value="1" name="group[18845]" id="mce-group[18845]-18845-0">-->
+<!--					<label class="" for="mce-group[18845]-18845-0">Collect</label>-->
+<!--					<input class="" type="radio" value="2" name="group[18845]" id="mce-group[18845]-18845-1">-->
+<!--					<label class="" for="mce-group[18845]-18845-1">Deliver</label>-->
+<!--				</div>-->
+<!--			</div>-->
 
 			<div id="mergeRow-gdpr" class="mergeRow gdpr-mergeRow content__gdprBlock mc-field-group">
 				<div class="content__gdpr">
