--- a/src/index.html
+++ b/src/index.html
@@ -14,32 +14,29 @@
 	<h1 class="font-extrabold">Meadowsweet Organics<br>weekly veg box</h1>
 	<div class="mb-8 mt-10">
 		<div class="flex text-sm text-gray-500 justify-between"><span class="text-black font-bold">1. RESERVE</span><span>2. PAY BY STANDING ORDER</span><span>3. CONFIRM BY EMAIL</span></div>
-		<h2 class="text-4xl mt-2 font-bold">All our veg boxes have been allocated</h2>
-		<span class="text-2xl">Complete form below to be updated on:</span>
-			<ul>
-				<li class="mt-2 mb-4 ml-5 list-disc">any new veg box allocations</li>
-				<li class="mb-4 ml-5 list-disc">availability in <strong>Edinburgh</strong></li>
+		<h2 class="text-4xl mt-2 font-bold">Reserve your veg box</h2>
+		<span class="text-2xl">by completing the form below</span>
 	</div>
-        <h2 class="mb-2 text-3xl">Six fresh and delicious years</h2>
-		<p class="mb-4">For our 6th year we are focusing on fresh and delicious summer vegetables complemented with a healthy portion of staples. You can't beat the taste of locally grown, sun ripened tomatoes and cucumbers</p>
-		<img class="" alt="veg box with tomatoes" src="/assets/images/brand/veg-box-01.jpg">
+	<h2 class="mb-2 text-3xl">Six fresh and delicious years</h2>
+	<p class="mb-4">For our 6th year we are focusing on fresh and delicious summer vegetables complemented with a healthy portion of staples. You can't beat the taste of locally grown, sun ripened tomatoes and cucumbers</p>
+	<img class="" alt="veg box with tomatoes" src="/assets/images/brand/veg-box-01.jpg">
 	<!--        <img class="" alt="tomatoes on the vine" src="/assets/images/brand/tomatoes.jpg">-->
-		<h2 class="mt-8 mb-4 text-3xl">Our season</h2>
-        <p class="mb-4"> Our season runs from the third week of May (wU+2215c 18th) through to the end of the second week of October (wU+2215c 12th). You will receive a weekly supply of delicious veg for the whole of the season. We will be in touch when we have finalised our delivery & collection days.</p>
-	    <img class="my-6" alt="tomatoes on the vine" src="/assets/images/brand/tomatoes.jpg">
-		<p class="mb-4">Delivery is available in Fife or you can collect your veg from the farm. This is a great opportunity to explore healthy farmland and our pasture. Feeling and hearing the diversity brought by organic farming and perhaps catching a glimpse of swooping swifts, low over the grasses.</p>
-		<img clas="mt-4 mb-2"alt="swifts swooping through the air" src="/assets/images/brand/swifts.png"/>
-		<h2 class="mt-6 mb-4 text-3xl">Key information</h2>
-        <ul class="mb-4">
-			<li class="mb-4 ml-5 list-disc">We're an established farm – this is our 6th year.</li>
-            <li class="mb-4 ml-5 list-disc">Our veg boxes start the third week of May (wU+2215c 18th) and run until the end of the second week of October</li>
-            <li class="mb-4 ml-5 list-disc">Payments are made by standing order, which helps us keep the price down.</li>
-			<li class="mb-4 ml-5 list-disc">We'll email out payment details on completion of the form below</li>
-			<li class="mb-4 ml-5 list-disc">If you have any questions please use the sign up form below and reply, or contact vegbox[at]meadowsweetorganics.co.uk</li>
-			<li class="mb-4 ml-5 list-disc">If you don't receive an email within minutes of signing up below check your spam folder and white list vegbox[at]meadowsweetorganics.co.uk</li>
-            <li class="mb-4 ml-5 list-disc">You are signing up for a whole season. If you only want a part season we will try to accomodate your needs but preference will be given to those who commit to a full season.</li>
-        </ul>
-		<img alt="a veg box" src="/assets/images/brand/veg-box-2.jpg">
+	<h2 class="mt-8 mb-4 text-3xl">Our season</h2>
+	<p class="mb-4"> Our season runs from the third week of May (wU+2215c 18th) through to the end of the second week of October (wU+2215c 12th). You will receive a weekly supply of delicious veg for the whole of the season. We will be in touch when we have finalised our delivery & collection days.</p>
+	<img class="my-6" alt="tomatoes on the vine" src="/assets/images/brand/tomatoes.jpg">
+	<p class="mb-4">Delivery is available in Fife or you can collect your veg from the farm. This is a great opportunity to explore healthy farmland and our pasture. Feeling and hearing the diversity brought by organic farming and perhaps catching a glimpse of swooping swifts, low over the grasses.</p>
+	<img clas="mt-4 mb-2"alt="swifts swooping through the air" src="/assets/images/brand/swifts.png"/>
+	<h2 class="mt-6 mb-4 text-3xl">Key information</h2>
+	<ul class="mb-4">
+		<li class="mb-4 ml-5 list-disc">We're an established farm – this is our 6th year.</li>
+		<li class="mb-4 ml-5 list-disc">Our veg boxes start the third week of May (wU+2215c 18th) and run until the end of the second week of October</li>
+		<li class="mb-4 ml-5 list-disc">Payments are made by standing order, which helps us keep the price down.</li>
+		<li class="mb-4 ml-5 list-disc">We'll email out payment details on completion of the form below</li>
+		<li class="mb-4 ml-5 list-disc">If you have any questions please use the sign up form below and reply, or contact vegbox[at]meadowsweetorganics.co.uk</li>
+		<li class="mb-4 ml-5 list-disc">If you don't receive an email within minutes of signing up below check your spam folder and white list vegbox[at]meadowsweetorganics.co.uk</li>
+		<li class="mb-4 ml-5 list-disc">You are signing up for a whole season. If you only want a part season we will try to accomodate your needs but preference will be given to those who commit to a full season.</li>
+	</ul>
+	<img alt="a veg box" src="/assets/images/brand/veg-box-2.jpg">
 </section>
 <!-- Begin Mailchimp Signup Form -->
 
@@ -95,48 +92,41 @@
 				</div>
 			</div>
 
-<!--			<div class="mc-field-group input-group">-->
-<!--				<h2 class="font-sans text-3xl font-normal mb-4">Choose Collection or Delivery</h2>-->
-<!--				<div class="flex flex-row justify-center leading-normal text-lg">-->
-<!--					<div class="w-6/12 float-left mr-4">-->
-<!--						<img alt="Rainbow over farm" src="/assets/images/brand/farm-rainbow.jpg" class="rounded mb-2 ">-->
-<!--						<span>Collect from the farm</span>-->
-<!--						<br><span class="text-2xl">£52 per month</span>-->
-<!--						<br><span>(£13 per week)</span>-->
-<!--					</div>-->
-<!--					<div class="w-6/12 float-right ml-4">-->
-<!--						<img alt="a van delivering" src="/assets/images/brand/delivery-01.jpg" class="rounded mb-2">-->
-<!--						Delivered to your door<br>-->
-<!--						<span class="text-2xl">£64 per month</span>-->
-<!--						<span><br>(£16 per week)</span>-->
-<!--					</div>-->
-<!--				</div>-->
-<!--				<div class="radio-buttons flex flex-row justify-center leading-snug mt-2">-->
-<!--					<input class="hidden" type="radio" value="1" name="group[18845]" id="mce-group[18845]-18845-0">-->
-<!--					<label class="w-6/12 float-left rounded-lg mr-4 pr-3 button-secondary flex justify-center font-bold border-2 border-gray-800 rounded-full py-2 pt-3 mt-1 text-l uppercase tracking-widest text-gray-800 hover:bg-gray-800 hover:text-white active:text-white active:bg-gray-800" for="mce-group[18845]-18845-0">Collect</label>-->
-<!--					<input class="hidden" type="radio" value="2" name="group[18845]" id="mce-group[18845]-18845-1">-->
-<!--					<label class="w-6/12 float-right rounded-lg ml-4 pl-3 button-secondary flex justify-center font-bold border-2 border-gray-800 rounded-full py-2 pt-3 mt-1 text-l uppercase tracking-widest text-gray-800 hover:bg-gray-800 hover:text-white active:text-white active:bg-gray-800" for="mce-group[18845]-18845-1">Deliver</label>-->
-<!--				</div>-->
-<!--			</div>-->
+			<div class="mc-field-group input-group">
+				<h2 class="font-sans text-3xl font-normal mb-4">Choose Collection or Delivery</h2>
 
 
-<!--				<div class="radio-buttons flex flex-row justify-center leading-snug mt-2">-->
-<!--					<input class="" type="radio" value="1" name="group[18845]" id="mce-group[18845]-18845-0">-->
-<!--					<label class="" for="mce-group[18845]-18845-0">Collect</label>-->
-<!--					<input class="" type="radio" value="2" name="group[18845]" id="mce-group[18845]-18845-1">-->
-<!--					<label class="" for="mce-group[18845]-18845-1">Deliver</label>-->
-<!--				</div>-->
-<!--			</div>-->
+				<div class="flex flex-row justify-center leading-normal text-lg">
+					<div class="w-6/12 float-left mr-4">
+						<img alt="Rainbow over farm" src="/assets/images/brand/farm-rainbow.jpg" class="rounded mb-2 ">
+						<span>Collect from the farm</span>
+						<br><span class="text-2xl">£52 per month</span>
+						<br><span>(£13 per week)</span>
+					</div>
+					<div class="w-6/12 float-right ml-4">
+						<img alt="a van delivering" src="/assets/images/brand/delivery-01.jpg" class="rounded mb-2">
+						Delivered to your door<br>
+						<span class="text-2xl">£64 per month</span>
+						<span><br>(£16 per week)</span>
+					</div>
+				</div>
+				<div class="radio-buttons flex flex-row justify-center leading-snug mt-2">
+					<input class="hidden" type="radio" value="1" name="group[18845]" id="mce-group[18845]-18845-0">
+					<label class="w-6/12 float-left rounded-lg mr-4 pr-3 button-secondary flex justify-center font-bold border-2 border-gray-800 rounded-full py-2 pt-3 mt-1 text-l uppercase tracking-widest text-gray-800 hover:bg-gray-800 hover:text-white active:text-white active:bg-gray-800" for="mce-group[18845]-18845-0">Collect</label>
+					<input class="hidden" type="radio" value="2" name="group[18845]" id="mce-group[18845]-18845-1">
+					<label class="w-6/12 float-right rounded-lg ml-4 pl-3 button-secondary flex justify-center font-bold border-2 border-gray-800 rounded-full py-2 pt-3 mt-1 text-l uppercase tracking-widest text-gray-800 hover:bg-gray-800 hover:text-white active:text-white active:bg-gray-800" for="mce-group[18845]-18845-1">Deliver</label>
+				</div>
+			</div>
 
 			<div id="mergeRow-gdpr" class="mergeRow gdpr-mergeRow content__gdprBlock mc-field-group">
 				<div class="content__gdpr">
 					<label class="font-sans text-3xl mb-4">Permission to contact</label>
 					<p class="font-sans">We share our ordering details and updates to your veg boxes by email. We do not pass your details to anyone. Please select emails below.</p>
 					<div class="bg-teal-200 py-4 rounded-lg hover:bg-teal-400 my-6 text-gray-900">
-					<fieldset class="mc_fieldset gdprRequired mc-field-group" name="interestgroup_field">
-						<label class="font-bold text-xl checkbox subfield" for="gdpr_26913"><input type="checkbox" id="gdpr_26913" name="gdpr[26913]" value="Y" class="av-checkbox gdpr"><span>Email</span> </label>
-					</fieldset>
-				</div>
+						<fieldset class="mc_fieldset gdprRequired mc-field-group" name="interestgroup_field">
+							<label class="font-bold text-xl checkbox subfield" for="gdpr_26913"><input type="checkbox" id="gdpr_26913" name="gdpr[26913]" value="Y" class="av-checkbox gdpr"><span>Email</span> </label>
+						</fieldset>
+					</div>
 					<p class="font-sans">You can unsubscribe at any time by clicking the link in the footer of our emails. For information about our privacy practices, please visit our website.</p>
 				</div>
 				<div class="content__gdprLegal">
